FullSb1-27-apr-15/src/objects/Opportunity_Finance__c.object
<CustomObject>
    <fields>
        <fullName>BBA_Total_Payments_AR_Year_2__c</fullName>
        <label>Total Payments AR - Year 2</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Year 2</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Payments_AR_Year_3__c</fullName>
        <label>Total Payments AR - Year 3</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Year 3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Payments_Year_1__c</fullName>
        <label>Total Payments - Year 1</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>contains</operation>
            <value>Year 1, Confirmation Deposit, Program Fee Payment, Refund, Writeoff, Accommodation Deposit, Accommodation Fee, Direct Loan Disbursement 1, Plus Loan Disbursement 1, Pell Grant Disbursement 1, Private Loan Disbursement, Accommodation Deposit Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>notContain</operation>
            <value>AR</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Payments_Year_4__c</fullName>
        <formula>BBA_Total_Fees_Year_4__c - BBA_Total_Payments_AR_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due - Year 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Program_Fee__c</fullName>
        <formula>+ BBA_Program_Fee_Year_1__c + BBA_Program_Fee_Year_2__c + BBA_Program_Fee_Year_3__c + BBA_Program_Fee_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Program Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Rotation_Fees_Year_1__c</fullName>
        <label>Total Rotation Fees - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Rotation_Fees_Year_2__c</fullName>
        <label>Total Rotation Fees - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Rotation_Fees_Year_3__c</fullName>
        <label>Total Rotation Fees - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_Scholarship_Financial_Aid_2__c</fullName>
        <formula>+ BBA_Scholarship_Financial_Aid_Year_1__c + BBA_Scholarship_Financial_Aid_Year_2__c + BBA_Scholarship_Financial_Aid_Year_3__c + BBA_Scholarship_Financial_Aid_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scholarship &amp; Financial Aid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_US_Financing_Pending_Year_3__c</fullName>
        <formula>BBA_US_Federal_Direct_Loan_Year_3__c +  BBA_US_Federal_Parent_Plus_Year_3__c +  BBA_US_Federal_Pell_Year_3__c -  BBA_Total_Disbursement_Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total US Financing, Pending Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Total_US_Financing_Pending_Year_4__c</fullName>
        <formula>BBA_US_Federal_Direct_Loan_Year_4__c +  BBA_US_Federal_Parent_Plus_Year_4__c +  BBA_US_Federal_Pell_Year_4__c -  BBA_Total_Disbursement_Year_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total US Financing, Pending Year 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Transfer_Credits__c</fullName>
        <label>Transfer Credits</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Direct_Loan_Year_1__c</fullName>
        <label>US Federal - Direct Loan - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Direct_Loan_Year_2__c</fullName>
        <label>US Federal - Direct Loan - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Direct_Loan_Year_3__c</fullName>
        <label>US Federal - Direct Loan - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Parent_Plus_Year_1__c</fullName>
        <label>US Federal - Parent Plus - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Parent_Plus_Year_2__c</fullName>
        <label>US Federal - Parent Plus - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Parent_Plus_Year_3__c</fullName>
        <label>US Federal - Parent Plus - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Pell_Year_1__c</fullName>
        <label>US Federal - Pell - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Pell_Year_2__c</fullName>
        <label>US Federal - Pell - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_US_Federal_Pell_Year_3__c</fullName>
        <label>US Federal - Pell - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Unlock_Student_Financial_Information__c</fullName>
        <label>BBA Unlock Student Financial Information</label>
        <picklist>
            <picklistValues>
                <fullName>Year1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BBA_Used_Credits_Total__c</fullName>
        <formula>BBA_Used_Credits_Yr1__c + BBA_Used_Credits_Yr2__c + BBA_Used_Credits_Yr3__c +  BBA_Used_Credits_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Used_Credits_Yr1__c</fullName>
        <label>Used Credits Yr1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Used_Credits_Yr2__c</fullName>
        <label>Used Credits Yr2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Used_Credits_Yr3__c</fullName>
        <label>Used Credits Yr3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Withdrawn_Credits_Yr1__c</fullName>
        <label>Withdrawn Credits Yr1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Withdrawn_Credits_Yr2__c</fullName>
        <label>Withdrawn Credits Yr2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Withdrawn_Credits_Yr3__c</fullName>
        <label>Withdrawn Credits Yr3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bertil_Hult_Scholarship_Amount_FS__c</fullName>
        <formula>Bertil_Hult_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bertil Hult Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bertil_Hult_Scholarship_Amount__c</fullName>
        <label>Bertil Hult Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Financial_Aid_II_FS__c</fullName>
        <formula>Campus_Financial_Aid_II__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus Financial Aid II FS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Financial_Aid_II__c</fullName>
        <label>Campus Financial Aid II</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Financial_Aid_I_FS__c</fullName>
        <formula>Campus_Financial_Aid_I__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus Financial Aid I FS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Financial_Aid_I__c</fullName>
        <label>Campus Financial Aid I</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campus_Program__c</fullName>
        <label>Campus-Program</label>
        <picklist>
            <picklistValues>
                <fullName>Boston-MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai-MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai-MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai-EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai-EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston-MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai-MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai-MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston-MIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-MIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-MIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-MFIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-MFIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-MSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai-EMBAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai-EMBAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-EMBAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami-EMBAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-BBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco-BBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London-Junior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Config_Year__c</fullName>
        <label>Config Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT DELETE THIS FIELD</description>
        <label>Confirmation Deposit Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit__c</fullName>
        <label>Confirmation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Opportunity__r.Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_tuition_page2__c</fullName>
        <description>This is used for the 3 page invoice, 60% slit</description>
        <formula>Total_Tuition_Amount__c*0.6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core_tuition_page2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_tuition_page3__c</fullName>
        <description>This is used for the 3 page invoice, 40% slit</description>
        <formula>Total_Tuition_Amount__c*0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core_tuition_page3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counter_App_Fee_NOT_paid__c</fullName>
        <description>This is counting a applications who have NOT paid the application fee and who do not have a fee waiver either.</description>
        <formula>If ((Application_Fee_Paid__c = 0) &amp;&amp; (Opportunity__r.Waived_off_Application_Fee__c = false),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter App Fee NOT paid/waived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Conf_Deposit_Less_Than_80__c</fullName>
        <formula>If (((1- ( Confirmation_Deposit__c - Deposit_Paid_FS__c ) / Confirmation_Deposit__c)*100) &lt;80 &amp;&amp; (( Adjustment_Amount__c &lt; Confirmation_Deposit__c )   &amp;&amp;   (Total_Tuition_Fees_Amount_Paid__c  &lt;  Confirmation_Deposit__c )),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Conf Deposit Less Than 80%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Paid_App_Fee__c</fullName>
        <formula>if( (Application_Fee_Paid__c &gt; 0) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Paid App Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Amount__c</fullName>
        <label>Course Deposit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Paid__c</fullName>
        <label>Course Deposit Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Confirmation Deposit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Due_Portal__c</fullName>
        <formula>Tuition_Fees_Balance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Installment_Plan_Accepted__c</fullName>
        <label>Date Installment Plan Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Student_Fin_Info_Unlocked__c</fullName>
        <label>Date Student Fin Info Unlocked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Davos_Flight_Paid_by_Hult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Davos Flight Paid by Hult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dean_Scholarship_Amount_FS__c</fullName>
        <formula>Dean_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dean Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dean_Scholarship_Amount__c</fullName>
        <label>Dean Scholarship Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Due2_FS__c</fullName>
        <formula>OP_Confirmation_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Due_FS__c</fullName>
        <label>Deposit Amount Due</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Balance__c</fullName>
        <formula>Total_Balance_Due_FS__c   -  Deposit_Paid_FS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Date_Paid__c</fullName>
        <label>Confirmation Deposit Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid_FS__c</fullName>
        <formula>Course_Deposit_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <label>Deposit Paid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desires_UG_Analyst_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires UG Analyst Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dubai_Housing_Bursary_Amount__c</fullName>
        <label>Dubai Housing Bursary Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visa_Cost__c</fullName>
        <label>Dubai Visa Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EF_Partner_Programs__c</fullName>
        <label>EF Partner Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IEMBA Program (6 months)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEMBA Program (3 months)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMBA_Housing_Bursary_FS__c</fullName>
        <formula>EMBA_Housing_Bursary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMBA Housing Bursary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMBA_Housing_Bursary__c</fullName>
        <label>EMBA Housing Bursary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Scholarship_Amount_FS__c</fullName>
        <formula>Early_Bird_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Bird Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Scholarship_Amount__c</fullName>
        <label>Early Bird Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance_Price__c</fullName>
        <label>Erika Insurance Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance__c</fullName>
        <label>Erika Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single 6 months (visiting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_date_late_payment__c</fullName>
        <inlineHelpText>For recruiters: please provide the estimated date of payment.</inlineHelpText>
        <label>Expected date late payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Financing_Status__c</fullName>
        <label>External Financing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Financing_Subtotal__c</fullName>
        <formula>Go_Ed_MEFA_Replacement_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Financing Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Financing__c</fullName>
        <label>External Financing</label>
        <picklist>
            <picklistValues>
                <fullName>MEFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadivi ( Venezuela)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funed (Mexico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiderh (Mexico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conacyt (Mexico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corfo ( Chile)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <referenceTo>Fees__c</referenceTo>
        <relationshipLabel>Finances</relationshipLabel>
        <relationshipName>Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fin_Aid_Cat_Parent__c</fullName>
        <label>Program (Fin Aid)</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fin_Aid_Hotel_and_Flight_FS__c</fullName>
        <formula>Fin_Aid_Hotel_and_Flight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin Aid Hotel and Flight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fin_Aid_Hotel_and_Flight__c</fullName>
        <description>This field is only to be filled in when Applicant is for EMBA.</description>
        <inlineHelpText>This field is only to be filled in when Applicant is for EMBA.</inlineHelpText>
        <label>Fin Aid Hotel and Flight</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approval_Reason__c</fullName>
        <label>Financial Aid Approval Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Merit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approved_Date__c</fullName>
        <label>Financial Aid Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approver__c</fullName>
        <description>Only GH and finance have permission to edit this field.</description>
        <label>Above Limit Financial Aid Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Category__c</fullName>
        <label>Merit Based Scholarship Category</label>
        <picklist>
            <controllingField>Fin_Aid_Cat_Parent__c</controllingField>
            <picklistValues>
                <fullName>Global Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Citizen Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Talent Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Entrepreneur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Business Leader Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hult Model United Nations Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-fellows scholarship (for Germans only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Futures Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond Borders Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurial Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurial Pivot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Yourself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patricia Escudero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shifaruh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Percent_of_Tuition_Fee__c</fullName>
        <formula>If( Tuition_Fee__c&gt;0,if( Program_Parsed__c = &quot;EMBA&quot;, ( Total_Fin_Aid_Amount_for__c -Adjustment_Amount__c)/ (2*Tuition_Fee__c), (Total_Fin_Aid_Amount_for__c -Adjustment_Amount__c)/ Tuition_Fee__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Percent of Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>